feat: implement invoice request functionality and enhance payment process

--- a/templates/base.html
+++ b/templates/base.html
@@ -1475,7 +1475,8 @@ $(function() {
 {% block jscript %}
 {% endblock %}
 
-<link rel="stylesheet" href="/static/fancybox/css/core.css"/>
-<script src="/static/fancybox/js/core.js"></script>
+<link rel="stylesheet" href="/static/fancyboxv4/fancybox.css?1"/>
+<link rel="stylesheet" href="/static/fancyboxv4/panzoom.css"/>
+<script src="/static/fancyboxv4/fancybox.umd.js"></script>
 </body>
 </html>
