--- a/templates/public/base.html
+++ b/templates/public/base.html
@@ -181,8 +181,7 @@
           id="google-font">
     <!-- Import Google Font-->
     <link rel="stylesheet" media="screen" href="/static/landing/assets/vendor/swiper/swiper-bundle.min.css"/>
-    <link rel="stylesheet" media="screen"
-          href="/static/landing/assets/vendor/lightgallery/css/lightgallery-bundle.min.css"/>
+    <link rel="stylesheet" media="screen"href="/static/landing/assets/vendor/lightgallery/css/lightgallery-bundle.min.css"/>
     {#    <link rel="stylesheet" media="screen" href="/static/landing/assets/css/theme.min.css?15">#}
     {#    <link rel="stylesheet" media="screen" href="/static/extracss.css?23">#}
     <link rel="stylesheet" media="screen" href="/static/loading.css?1">
@@ -515,6 +514,10 @@
         nonce="GutKLHL1"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 <script src="/static/jquery.blockUI.js"></script>
+
+<link rel="stylesheet" href="/static/fancyboxv4/fancybox.css?1"/>
+<link rel="stylesheet" href="/static/fancyboxv4/panzoom.css"/>
+<script src="/static/fancyboxv4/fancybox.umd.js"></script>
 {% block jscript %}
 {% endblock %}
 
