--- a/templates/public/base.html
+++ b/templates/public/base.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 <head>
     <meta charset="UTF-8"/>
     <title>{{ titulo }} | {{ nombreempresa }}</title>
