feat: update terminology in order templates and enhance invoice request prompt

--- a/templates/pedidos/solicitudes_inscripcion/form.html
+++ b/templates/pedidos/solicitudes_inscripcion/form.html
@@ -37,7 +37,7 @@
                         <th class="text-center" width="5%">#</th>
                         <th class="text-center" width="10%">Id</th>
                         <th class="text-center">Title</th>
-                        <th class="text-center"># Sheets</th>
+                        <th class="text-center"># Pages</th>
                         <th class="text-center">Subtotal</th>
                     </tr>
                     </thead>
