--- a/templates/email/pedido_recibido.html
+++ b/templates/email/pedido_recibido.html
@@ -27,7 +27,7 @@
                         <th style="padding: 8px; border: 1px solid #dee2e6; width: 5%;">#</th>
                         <th style="padding: 8px; border: 1px solid #dee2e6;">Id</th>
                         <th style="padding: 8px; border: 1px solid #dee2e6;">Title</th>
-                        <th style="padding: 8px; border: 1px solid #dee2e6;"># Sheets</th>
+                        <th style="padding: 8px; border: 1px solid #dee2e6;"># Pages</th>
                         <th style="padding: 8px; border: 1px solid #dee2e6;">Subtotal</th>
                     </tr>
                     </thead>
@@ -54,7 +54,9 @@
                     </tfoot>
                 </table>
                 <p style="margin: 10px 0 0;">
-                    To finalize your participation, please complete the payment process by clicking the button below:
+                   To finalize your participation, please complete the payment process by clicking the button below.
+                    <br>
+                    Remember that you can access your orders at any time from your profile by going to <b>"My Orders".</b>
                 </p><br>
 
                 <div style="text-align:center;">
