--- a/templates/public/complete_purchase/view.html
+++ b/templates/public/complete_purchase/view.html
@@ -296,9 +296,15 @@
                                     </label>
                                 </div>
                                 <div class=" d-lg-block pt-2 mt-n3">
-                                    <div class="form-check mb-1 mt-1">
-                                        <input class="form-check-input" type="checkbox" id="generate_invoice">
-                                        <label class="form-check-label" for="generate_invoice"><span class="text-muted">Do you require an invoice to be issued prior to making the payment? </span></label>
+                                    <div class="alert alert-info p-3">
+                                        <p class="mb-1">Do you need an invoice before making the payment?</p>
+                                        <div class="form-check form-switch">
+                                            <input class="form-check-input" type="checkbox" id="generate_invoice">
+                                            <label class="form-check-label" for="generate_invoice">
+                                                Yes, I need an invoice before making the payment
+                                            </label>
+                                        </div>
+                                        <small style="font-size: 12px" class="text-muted d-block mt-1">You will receive instructions to upload your payment receipt after the invoice is issued. <i>Remember that by selecting this option, your order will be on hold until the administrator issues an invoice with the details you have provided.</i></small>
                                     </div>
                                 </div>
                                 <div class=" d-lg-block pt-2 mt-n3">
