--- a/templates/public/base.html
+++ b/templates/public/base.html
@@ -277,7 +277,7 @@
 {#<script type="text/javascript" src="https://cdn.datatables.net/buttons/1.5.6/js/buttons.colVis.min.js"></script>#}
 
 
-<script src="/static/exhibiz/js/plugins.js"></script>
+<script src="/static/exhibiz/js/plugins.js?version=4"></script>
 <script src="/static/exhibiz/js/designesia.js"></script>
 <script src="/static/exhibiz/js/validation.js"></script>
 
